# prunounce

./: .gitattributes  .gitignore  app.db  package-lock.json  package.json
deploy/: nginx-prunounce.conf.example  prunounce-backend.service.example
docs/: deployment-vps.md
scripts/: generate-host-images.mjs
specs/: prd.md  user-review-panel.md
src/backend-python/: .env.example  README.md  _check_db.py  _check_dbs.py  _clear_cache.py  _test_edgetts.py  _test_gtts.py  _test_slow.py  _test_tts.py  _test_voices.py  app.db  check_coverage.py  ensure_story_assets.py  pyproject.toml  review_probe.py  run.py  seed_data.py  seed_stories.py  seed_stories.py.bak  seed_test_user.py  validate_content.py  verify_story_assets.py
src/backend-python/app/: auth.py  config.py  database.py  dependencies.py  hosts.py  main.py  models.py  rate_limit.py  schemas.py
src/backend-python/app/routers/: audio.py  auth.py  dictionary.py  health.py  hosts.py  profile.py  progress.py  reports.py  search.py  stories.py
src/backend-python/app/services/: story_audio.py  translation.py  tts.py
src/backend-python/app/utils/: dialogue.py
src/backend-python/data/: validation-exceptions.json
src/backend-python/scripts/: smoke_test.py
src/backend-python/tests/: conftest.py  test_audio.py  test_auth.py  test_dialogue.py  test_dictionary_search.py  test_e2e_multilang.py  test_health.py  test_hosts.py  test_profile.py  test_rate_limit.py  test_reports.py  test_stories.py  test_story_seed.py  test_translation.py  test_user_contributed_words.py  test_validate_content.py  test_word_lookup.py
(+212 files in other folders)
